<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity"
    android:id="@+id/ProfileLayout"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/profileLabel"
        android:textSize="24sp"
        android:textAlignment="center"
        android:background="@color/blue_Haze"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/profilePictureLabel"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:labelFor="@+id/profilePictureButton"
        />

    <ImageButton
        android:id="@+id/profilePictureButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/imageButtonContentDescription"
        android:src="@android:drawable/picture_frame"
        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/fNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileFirstNameLabel"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:labelFor="@+id/fNameField"
        />

    <EditText
        android:id="@+id/fNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profileFirstNameHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/fiord"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/lNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileLastNameLabel"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:labelFor="@+id/lNameField"
        />

    <EditText
        android:id="@+id/lNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profileLastNameHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/fiord"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/emailAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileEmailAddressLabel"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:labelFor="@+id/emailAddressField"
        />

    <EditText
        android:id="@+id/emailAddressField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profileEmailAddressHint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/fiord"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profilePasswordLabel"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:labelFor="@+id/passwordField"
        />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profilePasswordHint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/fiord"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/profileSaveButton"
        android:layout_width="140dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/profileSaveButton"
        android:backgroundTint="@color/east_Bay"
        android:textColor="@color/white"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/profileCancelButton"
        android:layout_width="140dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/profileCancelButton"
        android:backgroundTint="@color/white"
        android:textColor="@color/east_Bay"
        android:textSize="24sp"
        />

</LinearLayout>