<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageLocator"
    android:orientation="vertical"
    android:id="@+id/imageLocatorLayout">

    <TextView
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/profileLabel"
        android:textSize="24sp"
        android:textAlignment="center"
        android:background="@color/blue_Haze"
        />

    <RelativeLayout
        android:id="@+id/imageLocatorcontrols"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/longField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:hint="@string/longFieldHint"
            android:textColorHint="@color/fiord"
            android:minHeight="48dp"
            android:inputType="numberDecimal"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="7dp"
            />

        <EditText
            android:id="@+id/latField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/latFieldHint"
            android:textColorHint="@color/fiord"
            android:minHeight="48dp"
            android:inputType="numberDecimal"
            android:layout_toRightOf="@+id/longField"
            android:layout_margin="15dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/imageSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/imageSearchButton"
            android:backgroundTint="@color/mortar"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:maxHeight="48dp"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

</LinearLayout>